[gd_scene load_steps=9 format=2]

[ext_resource path="res://Weapons/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/bullet-02.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/weapons/bullet-trail.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/materials/lowpoly_material.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.05, 0.05, 0.5 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0235294, 1 )
colors = PoolColorArray( 0.101961, 0.207843, 0.356863, 0, 0.101961, 0.207843, 0.356863, 0.529412 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_texture = SubResource( 3 )

[node name="Bullet" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.457028 )
shape = SubResource( 1 )

[node name="Bullet" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
material_override = ExtResource( 4 )
cast_shadow = 0
mesh = ExtResource( 2 )
material/0 = null

[node name="BulletTrail" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -1.87313e-07, -2.14261, 0, 0, 0 )
cast_shadow = 0
mesh = ExtResource( 3 )
material/0 = SubResource( 4 )

[node name="Lifespan" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
